tests/ui/privacy/private-field-ty-err.stderr
error[E0616]: field `len` of struct `Foo` is private
  --> $DIR/private-field-ty-err.rs:3:10
   |
LL |     if x.len {
   |          ^^^ private field
   |
help: a method `len` also exists, call it with parentheses
   |
LL |     if x.len() {
   |             ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0616`.
